opam-version: "2.0"
version: "1.0.0"

maintainer: "d.plaindoux@free.fr"
authors: [
  "Didier Plaindoux <d.plaindoux@free.fr>"
]

license: "APL"
tags: ["language" "functional" "compiler"]
homepage: "https://github.com/lambe-lang/lambe"
dev-repo: "git+https://github.com/lambe-lang/lambe.git"
bug-reports: "https://github.com/lambe-lang/lambe/issues"

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

depends: [
  "ocaml" { >= "4.08.0" }
  "dune"
  "alcotest" {with-test}
  "odoc"{with-doc}
]

synopsis: "TODO"
description:"""
TODO
"""
